--- a/.github/workflows/sync_to_hub.yaml
+++ b/.github/workflows/sync_to_hub.yaml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://nateraw:$HF_TOKEN@huggingface.co/spaces/nateraw/host-a-blog-on-huggingface-spaces main --force
+        run: git push https://RajSang:$HF_TOKEN@huggingface.co/spaces/RajSang/host-a-blog-on-huggingface-spaces main --force
